--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,13 @@ dependencies:
     sdk: flutter
 
 
+  get: ^4.3.8
+  get_storage: ^2.0.3
+
+
+  crypto: ^3.0.1
+
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
