--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,17 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  flutter_launcher_icons: ^0.9.2
+  flutter_app_name: ^0.1.1
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon/icon-1.0.0.png"
+
+flutter_app_name:
+  name: "Simple Memo"
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
